# ai-hiring-copilot

./: LICENSE
backend/: README.md  docker-compose.yml
backend/app-core/: Dockerfile  README.md  alembic.ini  app.py  pyproject.toml
backend/app-core/alembic/: README  env.py
backend/app-core/alembic/versions/: 58e714b5277e_3.py  7a64d411e4b5_create_table_test.py
backend/app-core/db/: models.py
backend/app-core/lib/data/: sample_job_description.md  sample_job_description_1.md
backend/app-core/lib/helpers/: markdown.py  s3.py  ulid.py  worddoc.py
backend/app-core/lib/helpers/db/: resume.py  role.py
backend/app-core/lib/models/: dev.py  role.py  s3.py
backend/app-core/lib/models/product/: resume.py
backend/app-core/lib/scripts/: process_resumes.py
backend/app-core/router/: dev.py  resume.py  role.py
backend/app-core/tests/: test_resume_list_classified_endpoint.py  test_resume_register_endpoint.py
backend/platform/: README.md  app.py  pyproject.toml  settings.py
backend/platform/alembic/: env.py
backend/platform/alembic/versions/: 1533fb3fdf74_1.py  29b7c5485ba9_2.py  bdd2c2ec70eb_1.py  ca202bf13c04_2.py
backend/platform/db/: db.py  init_db.py  models.py
backend/platform/lib/: README.md
backend/platform/lib/data/: openai.py
backend/platform/lib/helpers/: openai.py  pdf.py  ulid.py  worddoc.py
backend/platform/lib/helpers/db/: resume.py  role.py
backend/platform/lib/models/: README.md  resume.py  role.py
backend/platform/lib/models/product/: resume.py
backend/platform/lib/scripts/: process_resumes.py
backend/platform/router/: dev.py  resume.py  role.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  fontAwesome.ts  index.css  index.scss  main.tsx
frontend/src/assets/: README.md
frontend/src/assets/styles/: common-styles.scss  common-variables.scss
frontend/src/lib/api/: dev.ts  (+2 more)
frontend/src/pages/: index.tsx
(+14 files in other folders)
