[tool.poetry]
name = "app-core"
version = "0.1.0"
description = ""
authors = ["Andy Jung <wontaethedev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pydantic = { extras = ["email"], version = "^2.9.2" }
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
uvicorn = "^0.32.0"
greenlet = "^3.1.1"
psycopg2-binary = "^2.9.10"
ulid-py = "^1.1.0"
pdfminer-six = "^20240706"
python-multipart = "^0.0.17"
openai = "^1.54.3"
python-docx = "^1.1.2"
markdown = "^3.7"
beautifulsoup4 = "^4.12.3"
aioboto3 = "^14.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
